# Net-Monitor

./: CMakeLists.txt  README.md
data/: file1.txt  generated_log_2026-06-26T13_38_57.282Z.txt
include/: Analyzer.h  Dashboard.h  LogEntry.h  LogParser.h  ReportGenerator.h  SearchFilter.h  ThreatDetector.h
reports/: logs_20260629_211140.csv  report_20260629_211140.txt  report_20260629_211301.txt
src/: Analyzer.cpp  Dashboard.cpp  LogParser.cpp  ReportGenerator.cpp  SearchFilter.cpp  ThreatDetector.cpp  main.cpp
